--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - "ORACLE_PWD=password"
     volumes:
       - oracle-data:/opt/oracle/oradata
+      - ./scripts/:/opt/oracle/scripts/other/
 
 
 volumes:
